# JNI-1.8-FixBug-AnimObject

./: README.md
jni/: Android.mk  CAudioStream.cpp  CAudioStream.h  CCheckFileHash.cpp  CClientInfo.cpp  CClientInfo.h  CDebugInfo.cpp  CDebugInfo.h  CFileHashed.cpp  CFileHashed.h  CLocalisation.cpp  CLocalisation.h  CMakeLists.txt  CServerManager.cpp  CServerManager.h  CSettings.cpp  CSettings.h  Collector.cpp  GButton.cpp  KillList.cpp  KillList.h  chatwindow.cpp  chatwindow.h  crashlytics.h  dialog.cpp  extrakeyboard.cpp  extrakeyboard.h  keyboard.cpp  keyboard.h  keyboardhistory.cpp  main.cpp  main.h  playertags.cpp  playertags.h  samp.vcxproj  samp.vcxproj.filters  scoreboard.cpp  scoreboard.h  scrollbar.cpp  str_obfuscator_no_template.hpp
jni/cryptors/: AUTOMOBILE_COLLISION_result.cpp  CHECK_HASH1_result.cpp  CHECK_HASH2_result.cpp  COMPONENT_VISIBLE_INTERNAL_result.cpp  DUMPLIBRARIES_result.cpp  FIRST_PROTECT_result.cpp  GAME_INTEGRITY1_result.cpp  GAME_INTEGRITY2_result.cpp  GAME_RESOURCES1_result.cpp  GAME_RESOURCES2_result.cpp  GAME_RESOURCES3_result.cpp  GAME_RESOURCES4_result.cpp  GAME_RESOURCES5_result.cpp  GAME_RESOURCES6_result.cpp  HANDLING_DATA_result.cpp  INITSAMP_result.cpp  INSTALLHOOKS_result.cpp  ISPMHERE_result.cpp  MODELINFO_EDITABLE_result.cpp  RESET_AFTER_RENDER_result.cpp  SERVER_CHECK1_result.cpp  SERVER_CHECK2_result.cpp  SERVER_CHECK3_result.cpp  TEARAK_result.cpp  TINY_ENCRYPT_result.cpp  XTEA3_result.cpp
jni/game/: CActorPed.cpp  CAdjustableHudColors.cpp  CAdjustableHudColors.h  CAdjustableHudPosition.cpp  CAdjustableHudPosition.h  CCustomPlateManager.cpp  CExtendedCarColors.cpp  CFirstPersonCamera.cpp  CHandlingDefault.cpp  CInfoBarText.cpp  CRadarRect.cpp  CRadarRect.h  CRemoteData.cpp  CRenderTarget.cpp  CSnow.cpp  CVector.h  CWeaponsOutFit.cpp  aimstuff.cpp  aimstuff.h  camera.h  crashfixes.cpp  crosshair.cpp  crosshair.h  entity.cpp  entity.h  font.cpp  font.h  game.cpp  game.h  hooks.cpp  materialtext.cpp  materialtext.h  obfuscated.cpp  object.cpp  object.h  pad.cpp  pad.h  patches.cpp  playerped.cpp  playerped.h  (+16 more)
jni/game/RW/: RenderWare.cpp  common.h  rphanim.h  rpworld.h  rwcore.h  rwplcore.h
jni/graphics/: CRQ_Commands.cpp  CRQ_Commands.h  CSkyBox.cpp  CSkyBox.h
jni/gui/: CBinder.cpp  CBinder.h  CFontInstance.cpp  CFontRenderer.cpp  ITouchListener.cpp  UIUtils.cpp  UIUtils.h  gui.cpp  gui.h  imgui_impl_renderware.cpp
jni/net/: CActorPool.cpp  CRawData.cpp  gangzonepool.cpp  localplayer.cpp  localplayer.h  netgame.cpp  netgame.h  netrpc.cpp  objectpool.cpp  objectpool.h  pickuppool.cpp  playerpool.cpp  playerpool.h  remoteplayer.cpp  remoteplayer.h  scriptrpc.cpp  streampool.cpp  streampool.h  streampool.rar  textlabelpool.cpp  vehiclepool.cpp  vehiclepool.h
jni/updatelog/: changelog
jni/util/: CJavaWrapper.cpp  CJavaWrapper.h  CStackTrace.h  armhook.cpp  armhook.h  util.cpp  util.h
jni/voice/: Channel.cpp  Channel.h  Effect.cpp  Effect.h  GlobalStream.cpp  Header.h  LocalStream.cpp  MicroIcon.cpp  MicroIcon.h  Network.cpp  Network.h  Playback.cpp  Plugin.cpp  PluginConfig.cpp  PluginConfig.h  PluginMenu.cpp  PluginMenu.h  Record.cpp  Record.h  RecordBuffer.cpp  RecordBuffer.h  SlideController.cpp  SpeakerList.cpp  SpeakerList.h  Stream.cpp  Stream.h  StreamAtObject.cpp  StreamAtPlayer.cpp  StreamAtPlayer.h  StreamAtPoint.cpp  StreamAtPoint.h  StreamAtVehicle.cpp  StreamAtVehicle.h  StreamInfo.cpp  StreamInfo.h
jni/voice/include/util/: KeyFilter.cpp  KeyFilter.h  Memory.hpp  Render.cpp  Samp.cpp
