cmake_minimum_required(VERSION 3.17)
project(jni)

set(CMAKE_CXX_STANDARD 20)

include_directories(.)
include_directories(cryptors)
include_directories(game)
include_directories(game/RW)
include_directories(gui)
include_directories(net)
include_directories(util)
include_directories(vendor/bass)
include_directories(vendor/enet)
include_directories(vendor/enet/include)
include_directories(vendor/hash)
include_directories(vendor/hash/bcrypt)
include_directories(vendor/hash/bcrypt/crypt_blowfish)
include_directories(vendor/imgui)
include_directories(vendor/ini)
include_directories(vendor/openal)
include_directories(vendor/openal/AL)
include_directories(vendor/opus)
include_directories(vendor/raknet)
include_directories(vendor/raknet/SAMP)

include_directories(C:/_CPP/ndk1COPY/sysroot/usr/include)

add_executable(jni
        cryptors/AUTOMOBILE_COLLISION_result.cpp
        cryptors/AUTOMOBILE_COLLISION_result.h
        cryptors/CHECK_HASH1_result.cpp
        cryptors/CHECK_HASH1_result.h
        cryptors/CHECK_HASH2_result.cpp
        cryptors/CHECK_HASH2_result.h
        cryptors/COMPONENT_VISIBLE_INTERNAL_result.cpp
        cryptors/COMPONENT_VISIBLE_INTERNAL_result.h
        cryptors/DUMPLIBRARIES_result.cpp
        cryptors/DUMPLIBRARIES_result.h
        cryptors/FIRST_PROTECT_result.cpp
        cryptors/FIRST_PROTECT_result.h
        cryptors/GAME_INTEGRITY1_result.cpp
        cryptors/GAME_INTEGRITY1_result.h
        cryptors/GAME_INTEGRITY2_result.cpp
        cryptors/GAME_INTEGRITY2_result.h
        cryptors/GAME_RESOURCES1_result.cpp
        cryptors/GAME_RESOURCES1_result.h
        cryptors/GAME_RESOURCES2_result.cpp
        cryptors/GAME_RESOURCES2_result.h
        cryptors/GAME_RESOURCES3_result.cpp
        cryptors/GAME_RESOURCES3_result.h
        cryptors/GAME_RESOURCES4_result.cpp
        cryptors/GAME_RESOURCES4_result.h
        cryptors/GAME_RESOURCES5_result.cpp
        cryptors/GAME_RESOURCES5_result.h
        cryptors/GAME_RESOURCES6_result.cpp
        cryptors/GAME_RESOURCES6_result.h
        cryptors/HANDLING_DATA_result.cpp
        cryptors/HANDLING_DATA_result.h
        cryptors/INITSAMP_result.cpp
        cryptors/INITSAMP_result.h
        cryptors/INSTALLHOOKS_result.cpp
        cryptors/INSTALLHOOKS_result.h
        cryptors/ISPMHERE_result.cpp
        cryptors/ISPMHERE_result.h
        cryptors/MODELINFO_EDITABLE_result.cpp
        cryptors/MODELINFO_EDITABLE_result.h
        cryptors/protect_common.cpp
        cryptors/protect_common.h
        cryptors/RESET_AFTER_RENDER_result.cpp
        cryptors/RESET_AFTER_RENDER_result.h
        cryptors/SERVER_CHECK1_result.cpp
        cryptors/SERVER_CHECK1_result.h
        cryptors/SERVER_CHECK2_result.cpp
        cryptors/SERVER_CHECK2_result.h
        cryptors/SERVER_CHECK3_result.cpp
        cryptors/SERVER_CHECK3_result.h
        cryptors/TEARAK_result.cpp
        cryptors/TEARAK_result.h
        cryptors/TINY_ENCRYPT_result.cpp
        cryptors/TINY_ENCRYPT_result.h
        cryptors/XTEA3_result.cpp
        cryptors/XTEA3_result.h
        game/RW/common.h
        game/RW/RenderWare.cpp
        game/RW/RenderWare.h
        game/RW/rpcriter.h
        game/RW/rperror.h
        game/RW/rphanim.h
        game/RW/rpmatfx.h
        game/RW/rpskin.h
        game/RW/rpuvanim.h
        game/RW/rpworld.h
        game/RW/rtanim.h
        game/RW/rtdict.h
        game/RW/rtquat.h
        game/RW/rwcore.h
        game/RW/rwlpcore.h
        game/RW/rwplcore.h
        game/RW/skeleton.h
        game/aimstuff.cpp
        game/aimstuff.h
        game/bass.h
        game/CActorPed.cpp
        game/CActorPed.h
        game/CAdjustableHudColors.cpp
        game/CAdjustableHudColors.h
        game/CAdjustableHudPosition.cpp
        game/CAdjustableHudPosition.h
        game/CAdjustableHudScale.cpp
        game/CAdjustableHudScale.h
        game/camera.cpp
        game/camera.h
        game/CCustomPlateManager.cpp
        game/CCustomPlateManager.h
        game/CExtendedCarColors.cpp
        game/CExtendedCarColors.h
        game/CFirstPersonCamera.cpp
        game/CFirstPersonCamera.h
        game/CHandlingDefault.cpp
        game/CHandlingDefault.h
        game/CInfoBarText.cpp
        game/CInfoBarText.h
        game/CRadarRect.cpp
        game/CRadarRect.h
        game/CRemoteData.cpp
        game/CRemoteData.h
        game/CRenderTarget.cpp
        game/CRenderTarget.h
        game/CSnow.cpp
        game/CSnow.h
        game/CStats.h
        game/CWeaponsOutFit.cpp
        game/CWeaponsOutFit.h
        game/entity.cpp
        game/entity.h
        game/font.cpp
        game/font.h
        game/game.cpp
        game/game.h
        game/hooks.cpp
        game/materialtext.cpp
        game/materialtext.h
        game/obfuscated.cpp
        game/object.cpp
        game/object.h
        game/pad.cpp
        game/pad.h
        game/patches.cpp
        game/playerped.cpp
        game/playerped.h
        game/quaternion.cpp
        game/quaternion.h
        game/radarcolors.cpp
        game/radarcolors.h
        game/rgba.cpp
        game/rgba.h
        game/scripting.cpp
        game/scripting.h
        game/snapshothelper.cpp
        game/snapshothelper.h
        game/splashscreen.cpp
        game/sprite2d.cpp
        game/sprite2d.h
        game/stream.cpp
        game/stream.h
        game/textdraw.cpp
        game/textdraw.h
        game/util.h
        game/util1.cpp
        game/vehicle.cpp
        game/vehicle.h
        game/widget.cpp
        game/widget.h
        game/widgetmanager.cpp
        game/widgetmanager.h
        gui/CFontInstance.cpp
        gui/CFontInstance.h
        gui/CFontRenderer.cpp
        gui/CFontRenderer.h
        gui/gui.cpp
        gui/gui.h
        gui/imgui_impl_renderware.cpp
        gui/ITouchListener.cpp
        gui/ITouchListener.h
        net/CActorPool.cpp
        net/CActorPool.h
        net/CRawData.cpp
        net/CRawData.h
        net/gangzonepool.cpp
        net/gangzonepool.h
        net/localplayer.cpp
        net/localplayer.h
        net/netgame.cpp
        net/netgame.h
        net/netrpc.cpp
        net/objectpool.cpp
        net/objectpool.h
        net/pickuppool.cpp
        net/pickuppool.h
        net/playerpool.cpp
        net/playerpool.h
        net/remoteplayer.cpp
        net/remoteplayer.h
        net/scriptrpc.cpp
        net/streampool.cpp
        net/streampool.h
        net/textdrawpool.cpp
        net/textdrawpool.h
        net/textlabelpool.cpp
        net/textlabelpool.h
        net/vehiclepool.cpp
        net/vehiclepool.h
        util/armhook.cpp
        util/armhook.h
        util/CJavaWrapper.cpp
        util/CJavaWrapper.h
        util/util.cpp
        util/util.h
        vendor/bass/bass.h
        vendor/enet/include/callbacks.h
        vendor/enet/include/enet.h
        vendor/enet/include/list.h
        vendor/enet/include/protocol.h
        vendor/enet/include/time.h
        vendor/enet/include/types.h
        vendor/enet/include/unix.h
        vendor/enet/include/utility.h
        vendor/enet/include/win32.h
        vendor/hash/bcrypt/crypt_blowfish/crypt.h
        vendor/hash/bcrypt/crypt_blowfish/crypt_blowfish.cpp
        vendor/hash/bcrypt/crypt_blowfish/crypt_blowfish.h
        vendor/hash/bcrypt/crypt_blowfish/crypt_gensalt.cpp
        vendor/hash/bcrypt/crypt_blowfish/crypt_gensalt.h
        vendor/hash/bcrypt/crypt_blowfish/ow-crypt.h
        vendor/hash/bcrypt/crypt_blowfish/wrapper.cpp
        vendor/hash/bcrypt/bcrypt.cpp
        vendor/hash/bcrypt/bcrypt.hpp
        vendor/hash/md5.cpp
        vendor/hash/md5.h
        vendor/hash/sha256.cpp
        vendor/hash/sha256.h
        vendor/imgui/imconfig.h
        vendor/imgui/imgui.cpp
        vendor/imgui/imgui.h
        vendor/imgui/imgui_draw.cpp
        vendor/imgui/imgui_internal.h
        vendor/imgui/stb_image_write.h
        vendor/imgui/stb_rect_pack.h
        vendor/imgui/stb_textedit.h
        vendor/imgui/stb_truetype.h
        vendor/ini/config.cpp
        vendor/ini/config.h
        vendor/openal/AL/al.h
        vendor/openal/AL/alc.h
        vendor/openal/AL/alext.h
        vendor/openal/AL/efx-creative.h
        vendor/openal/AL/efx-presets.h
        vendor/openal/AL/efx.h
        vendor/opus/opus.h
        vendor/opus/opus_custom.h
        vendor/opus/opus_defines.h
        vendor/opus/opus_multistream.h
        vendor/opus/opus_types.h
        vendor/raknet/SAMP/samp_auth.cpp
        vendor/raknet/SAMP/samp_netencr.cpp
        vendor/raknet/SAMP/samp_netencr.h
        vendor/raknet/SAMP/SAMPRPC.cpp
        vendor/raknet/SAMP/SAMPRPC.h
        vendor/raknet/_findfirst.cpp
        vendor/raknet/_findfirst.h
        vendor/raknet/AsynchronousFileIO.cpp
        vendor/raknet/AsynchronousFileIO.h
        vendor/raknet/AutopatcherPatchContext.h
        vendor/raknet/AutopatcherRepositoryInterface.h
        vendor/raknet/BigTypes.h
        vendor/raknet/BitStream.cpp
        vendor/raknet/BitStream.h
        vendor/raknet/BitStream_NoTemplate.cpp
        vendor/raknet/BitStream_NoTemplate.h
        vendor/raknet/CheckSum.cpp
        vendor/raknet/CheckSum.h
        vendor/raknet/ClientContextStruct.h
        vendor/raknet/CommandParserInterface.cpp
        vendor/raknet/CommandParserInterface.h
        vendor/raknet/ConsoleServer.h
        vendor/raknet/DataBlockEncryptor.cpp
        vendor/raknet/DataBlockEncryptor.h
        vendor/raknet/DataCompressor.cpp
        vendor/raknet/DataCompressor.h
        vendor/raknet/DS_BinarySearchTree.h
        vendor/raknet/DS_BPlusTree.h
        vendor/raknet/DS_ByteQueue.cpp
        vendor/raknet/DS_ByteQueue.h
        vendor/raknet/DS_Heap.h
        vendor/raknet/DS_HuffmanEncodingTree.cpp
        vendor/raknet/DS_HuffmanEncodingTree.h
        vendor/raknet/DS_HuffmanEncodingTreeFactory.h
        vendor/raknet/DS_HuffmanEncodingTreeNode.h
        vendor/raknet/DS_LinkedList.h
        vendor/raknet/DS_List.h
        vendor/raknet/DS_Map.h
        vendor/raknet/DS_MemoryPool.h
        vendor/raknet/DS_OrderedChannelHeap.h
        vendor/raknet/DS_OrderedList.h
        vendor/raknet/DS_Queue.h
        vendor/raknet/DS_QueueLinkedList.h
        vendor/raknet/DS_RangeList.h
        vendor/raknet/DS_Table.cpp
        vendor/raknet/DS_Table.h
        vendor/raknet/DS_Tree.h
        vendor/raknet/DS_WeightedGraph.h
        vendor/raknet/EmailSender.h
        vendor/raknet/EncodeClassName.cpp
        vendor/raknet/Export.h
        vendor/raknet/ExtendedOverlappedPool.cpp
        vendor/raknet/ExtendedOverlappedPool.h
        vendor/raknet/FileOperations.cpp
        vendor/raknet/FileOperations.h
        vendor/raknet/FullyConnectedMesh.h
        vendor/raknet/GetTime.cpp
        vendor/raknet/GetTime.h
        vendor/raknet/InternalPacket.h
        vendor/raknet/InternalPacketPool.cpp
        vendor/raknet/InternalPacketPool.h
        vendor/raknet/LinuxStrings.cpp
        vendor/raknet/LinuxStrings.h
        vendor/raknet/LogCommandParser.cpp
        vendor/raknet/LogCommandParser.h
        vendor/raknet/MTUSize.h
        vendor/raknet/multiplayer.h
        vendor/raknet/NetworkIDGenerator.h
        vendor/raknet/NetworkTypes.cpp
        vendor/raknet/NetworkTypes.h
        vendor/raknet/PacketEnumerations.h
        vendor/raknet/PacketPool.h
        vendor/raknet/PacketPriority.h
        vendor/raknet/PluginInterface.cpp
        vendor/raknet/PluginInterface.h
        vendor/raknet/RakAssert.h
        vendor/raknet/RakClient.cpp
        vendor/raknet/RakClient.h
        vendor/raknet/RakClientInterface.h
        vendor/raknet/RakNetCommandParser.cpp
        vendor/raknet/RakNetCommandParser.h
        vendor/raknet/RakNetDefines.h
        vendor/raknet/RakNetStatistics.cpp
        vendor/raknet/RakNetStatistics.h
        vendor/raknet/RakNetworkFactory.cpp
        vendor/raknet/RakNetworkFactory.h
        vendor/raknet/RakPeer.cpp
        vendor/raknet/RakPeer.h
        vendor/raknet/RakPeerInterface.h
        vendor/raknet/rakserver.cpp
        vendor/raknet/RakServer.h
        vendor/raknet/RakServerInterface.h
        vendor/raknet/RakSleep.cpp
        vendor/raknet/RakSleep.h
        vendor/raknet/Rand.cpp
        vendor/raknet/Rand.h
        vendor/raknet/ReliabilityLayer.cpp
        vendor/raknet/ReliabilityLayer.h
        vendor/raknet/Replica.h
        vendor/raknet/ReplicaEnums.h
        vendor/raknet/rijndael-boxes.h
        vendor/raknet/rijndael.cpp
        vendor/raknet/rijndael.h
        vendor/raknet/RouterInterface.h
        vendor/raknet/RPCMap.cpp
        vendor/raknet/RPCMap.h
        vendor/raknet/RPCNode.h
        vendor/raknet/RSACrypt.h
        vendor/raknet/SHA1.cpp
        vendor/raknet/SHA1.h
        vendor/raknet/SimpleMutex.cpp
        vendor/raknet/SimpleMutex.h
        vendor/raknet/SimpleTCPServer.h
        vendor/raknet/SingleProducerConsumer.h
        vendor/raknet/SocketLayer.cpp
        vendor/raknet/SocketLayer.h
        vendor/raknet/StringCompressor.cpp
        vendor/raknet/StringCompressor.h
        vendor/raknet/StringTable.cpp
        vendor/raknet/StringTable.h
        vendor/raknet/SystemAddressList.cpp
        vendor/raknet/SystemAddressList.h
        vendor/raknet/SystemDatabaseClient.cpp
        vendor/raknet/SystemDatabaseClient.h
        vendor/raknet/SystemDatabaseServer.cpp
        vendor/raknet/SystemDatabaseServer.h
        vendor/raknet/TableSerializer.cpp
        vendor/raknet/TableSerializer.h
        vendor/raknet/TCPInterface.cpp
        vendor/raknet/TCPInterface.h
        vendor/raknet/TelnetTransport.cpp
        vendor/raknet/TelnetTransport.h
        vendor/raknet/ThreadPool.h
        vendor/raknet/TransportInterface.h
        vendor/raknet/Types.h
        CAudioStream.cpp
        CAudioStream.h
        CCheckFileHash.cpp
        CCheckFileHash.h
        CClientInfo.cpp
        CClientInfo.h
        CDebugInfo.cpp
        CDebugInfo.h
        CFileHashed.cpp
        CFileHashed.h
        CFPSFix.cpp
        CFPSFix.h
        CGameResourcesDecryptor.cpp
        CGameResourcesDecryptor.h
        chatwindow.cpp
        chatwindow.h
        CLocalisation.cpp
        CLocalisation.h
        crashlytics.h
        CServerManager.cpp
        CServerManager.h
        CSettings.cpp
        CSettings.h
        dialog.cpp
        dialog.h
        keyboard.cpp
        keyboard.h
        keyboardhistory.cpp
        keyboardhistory.h
        KillList.cpp
        KillList.h
        main.cpp
        main.h
        nv_event.cpp
        nv_event.h
        playertags.cpp
        playertags.h
        scoreboard.cpp
        scoreboard.h
        scrollbar.cpp
        scrollbar.h
        str_obfuscator.hpp
        str_obfuscator_no_template.hpp util/CStackTrace.h graphics/CSkyBox.cpp graphics/CSkyBox.h game/CVector.cpp game/CVector.h graphics/CRQ_Commands.cpp graphics/CRQ_Commands.h gui/CBinder.cpp gui/CBinder.h)
